# wbbl

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js  wrangler.toml
.github/workflows/: build-wbbl.yml
src/: animation_frame.rs  awareness_sync.rs  awareness_ws_sync.rs  builtin_geometry.rs  callback_future.rs  compiler.rs  compiler_constants.rs  compute_rasterizer.rs  constraint_solver.rs  constraint_solver_constraints.rs  convex_hull.rs  cube.glb  data_types.rs  dot_converter.rs  gltf_encoder.rs  graph_functions.rs  graph_spatial_lookup_types.rs  graph_transfer_types.rs  graph_types.rs  intermediate_compiler_types.rs  lib.rs  model_scene_file_abstractions.rs  node_display_data.rs  preview_renderer.rs  shader_layouts.rs  store_errors.rs  test_fragment_shader.rs  utils.rs  uv_sphere.glb  vertex_shader.rs  wbbl_graph_web_worker.rs  wbbl_physics.rs  wbbl_webapp_graph_store.rs  wbbl_webapp_user_preferences_store.rs  websocket_protocol.rs  yrs_utils.rs
tests/: builtin_geometry_tests.rs  gltf_encoder_tests.rs  rasterizer_tests.rs  vertex_shader_tests.rs
wbbl-compiler-rust/: Cargo.toml
wbbl-compiler-rust/src/: compiler.rs  compiler_types.rs  constraint_solver.rs  constraint_solver_constraints.rs  data_types.rs  graph_functions.rs  intermediate_compiler_types.rs  lib.rs
wbble-rust/: Cargo.toml
wbble-rust/src/: compiler.rs  compiler_constants.rs  compute_rasterizer.rs  graph_types.rs  intermediate_compiler_types.rs  lib.rs
wbble-rust/tests/: rasterizer_tests.rs
web/: App.tsx  brand-theme.css  graph-worker-reference.ts  graph-worker.ts  index.css  keybind-descriptors.ts  main.tsx  port-constants.ts  port-type-styling.ts  routeTree.gen.ts  use-wbbl-graph-store.ts  worker.ts  worker_message_types.ts
web/components/: ApplicationMenu.tsx  Breadcrumb.tsx  Graph.tsx  GraphCanvasContextMenu.tsx  GraphToolbar.tsx  GroupContextMenu.tsx  KeybindingDialogContents.tsx  LoadingScreen.tsx  NodeContextMenu.tsx  NodeGroup.tsx  NodeGroupRenderer.tsx  NodeMenu.tsx  NodeOrEdgeContextMenu.tsx  OrganizationCheck.tsx  ProjectCheck.tsx  SearchMenu.tsx  Sidebar.tsx  SourcePort.tsx  TargetPort.tsx  UserAvatar.tsx  WbblBrandMark.tsx  WbblLogo.tsx  WbbleConnectionLine.tsx  WbbleEdge.tsx  WbbleNode.tsx
web/components/icons/core-line/: CoreLineAreaSelection.tsx  CoreLineChevronRight.tsx  CoreLineClose.tsx  CoreLineComment.tsx  CoreLineCursor.tsx  CoreLineHorizontalMenu.tsx  CoreLineNewFolder.tsx  CoreLinePlus.tsx  CoreLineRecenter.tsx  CoreLineRefresh.tsx  CoreLineZoomIn.tsx  CoreLineZoomOut.tsx  CoreLineZoomResetZoom.tsx
web/components/icons/flex-solid/: FlexSolidChevronRight.tsx
web/components/icons/micro/: MicroAddIcon.tsx  MicroBookmarkIcon.tsx  MicroChevronRight.tsx  MicroCleanIcon.tsx  MicroCopyPasteIcon.tsx  MicroCutIcon.tsx  MicroDuplicateIcon.tsx  MicroGroupIcon.tsx  MicroHelpIcon.tsx  MicroHomeIcon.tsx  MicroLandscapeIcon.tsx  MicroPencilIcon.tsx  MicroPreviewIcon.tsx  MicroRedoIcon.tsx  MicroSearchIcon.tsx  MicroSettingsIcon.tsx  MicroShareIcon.tsx  MicroTrashIcon.tsx  MicroUnbookmarkIcon.tsx  MicroUndoIcon.tsx  MicroUngroupIcon copy.tsx  MicroUngroupIcon.tsx  MicroWarningIcon.tsx
web/components/node_types/: BinaryOperatorNode.tsx  BuiltInNode.tsx  JunctionNode.tsx  OutputNode.tsx  PreviewNode.tsx  SlabNode.tsx  WbbleNode.tsx  index.ts
web/fonts/Gasoek_One/: OFL.txt
web/hooks/: and-then.ts  use-actions-menu.ts  use-card-wbbl.ts  use-edge-end-portal.ts  use-elkjs.ts  use-is-wbble-effect-enabled.ts  use-port-location.ts  use-port-type.ts  use-preferences-store.ts  use-screen-dimensions.ts  use-shortcut.tsx  use-wbbl-graph-store.ts
web/hooks/use-group-drag/: index.ts  utils.ts
web/hooks/use-on-edge-drag-updater/: index.ts  utils.ts
web/routes/: __root.tsx  index.lazy.tsx
web/routes/app/: about.lazy.tsx  index.lazy.tsx  test.lazy.tsx
web/routes/app/projects/$projectName/: index.lazy.tsx
web/utils/: format-keybinding.ts  is-mac-like.ts  normalize-keybinding.ts  set-connection-path.ts  time-ago.ts  transform-keybinding-for-react-flow.ts
