[package]
name = "wbbl"
version = "0.1.0"
authors = ["ncthbrt"]
edition = "2021"
description = "Wbbl is a app to edit 3d materials"
repository = "https://github.com/ncthbrt/wbbl.git"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = { version = "0.2.91" }
graphviz-rust = { git = "https://github.com/ncthbrt/graphviz-rust", default-features = false, package = "graphviz-rust" }
uuid = { version = "1.7.0", features = ["v4", "js", "fast-rng"] }
gltf = { version = "1", features = ["names"] }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.25.0", features = ["mint", "serde"] }
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "console",
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    "HtmlCanvasElement",
    "OffscreenCanvas",
    "MessageEvent",
    "Worker",
    "DedicatedWorkerGlobalScope",
    "Clipboard",
    "ClipboardItem",
    "HtmlDocument",
    "Blob",
    "WebSocket",
    "Location",
] }
bytemuck = { version = "1.14.3", features = ["wasm_simd"] }
wgpu = { version = "0.19.3", default-features = false, features = [
    "webgpu",
    "naga",
    "naga-ir",
] }
wasm-bindgen-futures = "0.4.42"
console_error_panic_hook = "0.1.7"
yrs = "0.18.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.115"
im = "15.1.0"
bitflags = "2.5.0"
rstar = { version = "0.12.0", features = ["mint"] }
mint = "0.5.9"

[dev-dependencies]
wasm-bindgen-test = "0.3.41"


[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
